--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,7 @@
 ---
-title: "johnryan412.github.io"
+title: "John Ryan, Ph.D."
 ---
 
-This is a Quarto website.
+Welcome! This is my personal website.
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
+#https://ucsb-meds.github.io/creating-quarto-websites/
