--- a/about.qmd
+++ b/about.qmd
@@ -2,8 +2,4 @@
 title: "About"
 ---
 
-About this site
-
-```{r}
-1 + 1
-```
+I am the Statistical Project Manager for the Division of Lung Transplant in the Department of Cardiothoracic Surgery at the University of Pittsburgh Medical Center.  I have a Ph.D. in Psychology from Georgia State University, and am currently completing a Master's Degree in Statistical Data Science from Texas A&M University.
