--- a/Publications.qmd
+++ b/Publications.qmd
@@ -1,5 +1,89 @@
 ---
-title: "publications"
+title: "Publications"
 ---
 
-Mahajan, A; Esper, S; Oo, TH; McKibben, J; Garver, M; Artman, J; Klahre, C; Ryan, JP; Sadhasivam, S; Holder-Murray, J; Marroquin, OC. (2023). Development and Validation of a Machine Learning Model to Identify Patients Before Surgery at High Risk for Postoperative Adverse Events. JAMA Network Open (in press).
+**2023/In Press**
+
+Mahajan, A; Esper, S; Oo, TH; McKibben, J; Garver, M; Artman, J; Klahre, C; **Ryan, JP**; Sadhasivam, S; Holder-Murray, J; Marroquin, OC. (2023). Development and Validation of a Machine Learning Model to Identify Patients Before Surgery at High Risk for Postoperative Adverse Events. JAMA Network Open (in press).
+
+**2022**
+
+Hyzny EJ, Chan EG, Malik SM, Morrell MR, Furukawa M, **Ryan JP**, Sanchez PG.  (2022).  Risk Factors and Outcomes of Postoperative Hepatic Dysfunction after Lung Transplantation.  *Annals of Thoracic Surgery, in press.*
+
+Coster JN, Noda K, **Ryan JP**, Chan EG, Furukawa M, Luketich JD, Sanchez PG. (2022).  Effects of Intraoperative Support Strategies on Endothelial Injury and Clinical Lung Transplant Outcomes.  *Seminars in Thoracic and Cardiovascular Surgery, in press.*
+
+Hlavin C, Muluk S, Muluk V, **Ryan JP**, Wagner J, Dhupar R.  (2022).  A Program to Reduce Post-Operative Opioid Prescribing at a Veteran\'s Affairs Hospital.  *Journal of Clinical Medicine, 11,* 5453.
+
+Chan EG, Hyzny EJ, Furukawa M, **Ryan JP,** Subramaniam K, Morrell MR, Pilewski JM, Luketich JD, Sanchez PG.  (2022).  Intraoperative Support for Primary Bilateral Lung Transplantation: A Propensity-Matched Analysis.  *The Annals of Thoracic Surgery,* in press.
+
+Furukawa M, Chan EG, **Ryan JP**, Hyzny EJ, Sacha LM, Coster JN, Pilewski JM, Lendermon EA, Kilaru SD, McDyer JF, Sanchez PG.  (2022).  Induction Strategies in Lung transplantation: Alemtuzumab vs. Basiliximab a single-center experience.  *Frontiers in Immunology, 13.*
+
+Sanchez PG. Chan EG, Madde A, Furukawa M, Coster JN, **Ryan JP**, Luketich JD. (2022). Transpulmonary gradient as a predictor for outcomes after lung transplantation.  *Shanghai Chest, 6(2).*
+
+Furukawa M, Chan E, Morrell MR, **Ryan JP,** Rivosecchi R, Iasella C, Lendermon E, Pilewski J, Sanchez PG.  (2022).  Risk factors of bronchial dehiscence after primary lung transplantation.  *Journal of Cardiac Surgery, 37(4),* 950-957.
+
+Chan EG, Hyzny EG, **Ryan JP,** Morrell MR, Pilewski J, Sanchez PG. (2022). Outcomes Following Lung Re-transplantation in Patients with Cystic Fibrosis.  *Journal of Cystic Fibrosis, 21(3),* 482-488.
+
+2021
+
+Joubert KD, Okusanya OT, Mazur S, **Ryan JP,** Ekeke CN, Schuchert MJ, Soloff AC, Dhupar R. (2021). Prognostic Difference of Pleural versus Distant Metastasis after Surgery for Lung Cancer. *Journal of Clinical Medicine, 10(4846).*
+
+Powers AA, Jones KE, Eisenberg SH, Rigatti LH, **Ryan JP,** Luketich JD, Lotze MT, LaRue AC, Dhupar R, Soloff AC. (2021).  Experimental respiratory exposure to putative Gulf War toxins promotes persistent alveolar macrophage recruitment and pulmonary inflammation.  *Life Sciences, 282.*
+
+Sainathan S, **Ryan JP,** Sharma M, Harano T, Morell V, Sanchez PG.  (2021). Outcome of Bridge-to-Lung-Transplantation with ECMO in Pediatric Patients 12 Years and Older.  *The Annals of Thoracic Surgery, 112(4),* 1083-1088.
+
+Furukawa M, Chan EG, Harano T, **Ryan JP,** Rivosecchi R, Morrell MR, Sanchez PG.  (2021).  Basiliximab versus Alemtuzumab: The Association Between Induction Agent and Airway Complications Following Lung Transplantation.  *American Journal of Transplantation.*
+
+Hyzny EJ, Chan EG, **Ryan JP**, Harano T, Morrell MR, Sanchez PG.  (2021). Liver Dysfunction Following Lung Transplantation.  *American Journal of Transplantation.*
+
+Esper SA, Wallisch W, **Ryan JP,** Sanchez PG, Sciortino C, Murray H, Arlia P, D\'Cunha JD, Mahajan A, Triulzi D, Subramaniam K.  (2021).  Platelet transfusion is associated with 90‐day and 1‐year mortality for adult patients requiring veno‐arterial extracorporeal membrane oxygenation.  *Vox Sanguinis, 116(4),* 440-450.
+
+Christie IG, Chan EG, **Ryan JP,** Harano T, Morrell MR, Luketich JD, Sanchez PG.  (2021).  National trends in extended criteria donor utilization and outcomes for lung transplantation.  *The Annals of Thoracic Surgery, 111(2),* 421-426.
+
+Harano T, **Ryan JP,** Chan EG, Noda K, Morrell MR, Luketich JDL, Sanchez PG.  (2021).  Lung transplantation for the treatment of irreversible acute respiratory distress syndrome.  *Clinical Transplantation, 35(2).*
+
+Harano T, **Ryan JP,** Morrell M, Luketich JD, Sanchez PG.  (2021).  Extracorporeal Membrane Oxygenation for Primary Graft Dysfunction After Lung Transplantation.  *ASAIO Journal (American Society for Artificial Internal Organs), 67(9),* 1071-1078.
+
+Rivosecchi RM, Arakelians AR, **Ryan JP,** Murray H, Padmanabhan R, Gomez H, Phillips D, Sciortino C, Arlia P, Freeman P, Sappington D, Sanchez PG.  (2021).  *Critical Care Medicine, 49(7),* 1129-1136.
+
+Chan EG, Chan PG, Harano T, **Ryan JP,** Morrell MR, Sanchez PG.  (2021).  Trends in lung transplantation practices across the US during the COVID-19 pandemic.  *Transplantation, 105(1),* 187-192.
+
+2020
+
+Jorge A, Sanchez PG, Hayanga JWA, Pilewski JM, Morrell M, Tuft M, **Ryan JP,** D\'Cunha JD.  (2020).  Routine deep vein thrombosis screening after lung transplantation: incidence and risk factors.  *Journal of Thoracic and Cardiovascular Surgery, 159(3),* 1142-1150.
+
+D\'Cunha JD, Philips BJ, Kumar A, Burki S, **Ryan JP.**  (2020).  Triptolide-induced apoptosis in non-small cell lung cancer via a novel miR204-5p/Caveolin-1/Akt-mediated pathway.  *Oncotarget, 11(28),* 2793-2806.
+
+2018
+
+**Ryan JP,** Karim HT, Aizenstein HA, Helbling NL, Toledo FGS.  (2018).  Insulin sensitivity predicts brain connectivity following a meal.  *NeuroImage, 171,* 268-276.
+
+**Ryan JP,** Aizenstein HJ, Orchard TJ, Nunley KA, Karim HT, Rosano C.  (2018).  Basal ganglia cerebral blood flow associates with psychomotor speed in adults with type 1 diabetes.  *Brain Imaging and Behavior, 12(5),* 1271-1278*.*
+
+2015
+
+**Ryan JP,** Aizenstein HJ, Orchard TJ, Ryan CM, Saxton JA, Fine DF, Nunley KA, Rosano, C.  (2015).  Age of childhood onset in type 1 diabetes and functional brain connectivity in midlife.  *Psychosomatic Medicine, 77,* 622-630.
+
+Lee JH, **Ryan J**, Andreescu C, Aizenstein HJ, Lim HK.  (2015).  Brainstem morphological changes in Alzheimer disease.  *NeuroReport, 26,* 411-15.
+
+Nunley KA, Ryan CM, Orchard TJ, Aizenstein HJ, Jennings JR, **Ryan JP**, Zgibor JC, Boudreau RM, Costacou T, Maynard J, Miller RG, Rosano C.  (2015).  White matter hyperintensities in middle-aged adults with childhood-onset type 1 diabetes.  *Neurology, 84,* 2062-2069*.*
+
+2013
+
+Vanman EJ, **Ryan JP**, Pedersen WC, & Ito TA.  (2013).  Probing prejudice with startle eyeblink modification: A marker of attention, emotion, or both?  *Int J Psychol Res, 6,* 30-41.
+
+**Ryan JP**, Sheu LK, Verstynen T, Onyewuenyi IC, & Gianaros PJ.  (2013).  Cerebral blood flow links insulin resistance and baroreflex sensitivity.  *PLOS One, 8,* 1-8.
+
+2012
+
+**Ryan JP**, Sheu LK, Critchley HD, & Gianaros PJ.  (2012).  A neural circuitry linking insulin resistance to depression.  *Psychosom Med, 74,* 476-482.
+
+2011
+
+**Ryan, JP**, Sheu, LK, & Gianaros, PJ.  (2011). Resting State Functional Connectivity within the Cingulate Cortex Jointly Predicts Agreeableness and Stressor-Evoked Cardiovascular Reactivity.   *NeuroImage, 55,* 363-370.
+
+Parent MB, Krebs-Kraft DL, **Ryan JP**, Wilson J, & Hamann S.  (2011). Glucose administration enhances fMRI brain activation and connectivity related to episodic memory encoding for neutral and emotional stimuli.  *Neuropsychologia, 49,* 1052-66*.*
+
+2002
+
+Van Petten C, Luka BJ, Rubin SR, & **Ryan JP.** (2002).  Frontal brain activity predicts individual performance in an associative memory exclusion test.  *Cereb Cortex, 12,* 1180-1192.
