--- a/Publications.qmd
+++ b/Publications.qmd
@@ -2,7 +2,7 @@
 title: "Publications"
 ---
 
-**2023/In Press**
+## 2023/In Press
 
 Mahajan, A; Esper, S; Oo, TH; McKibben, J; Garver, M; Artman, J; Klahre, C; **Ryan, JP**; Sadhasivam, S; Holder-Murray, J; Marroquin, OC. (2023). Development and Validation of a Machine Learning Model to Identify Patients Before Surgery at High Risk for Postoperative Adverse Events. *JAMA Network Open*, *in press*.
 
@@ -20,7 +20,7 @@ Furukawa M, Noda K, Chan EG, **Ryan JP**, Coster JN, Sanchez PG. Lung transplant
 
 Deitz RL, Thorngren CK, Seese LM, Ryan JP, Ramanan R, **Sanchez PG**, Murray H. Evolution of extracorporeal membrane oxygenation trigger criteria in COVID-19 acute respiratory distress syndrome. *Journal of Thoracic and Cardiovascular Surgery, in press.*
 
-**2022**
+## 2022
 
 Hlavin C, Muluk S, Muluk V, **Ryan JP**, Wagner J, Dhupar R.  (2022).  A Program to Reduce Post-Operative Opioid Prescribing at a Veteran's Affairs Hospital.  *Journal of Clinical Medicine, 11,* 5453.
 
@@ -32,7 +32,7 @@ Furukawa M, Chan E, Morrell MR, **Ryan JP,** Rivosecchi R, Iasella C, Lendermon 
 
 Chan EG, Hyzny EG, **Ryan JP,** Morrell MR, Pilewski J, Sanchez PG. (2022). Outcomes Following Lung Re-transplantation in Patients with Cystic Fibrosis.  *Journal of Cystic Fibrosis, 21(3),* 482-488.
 
-**2021**
+## 2021
 
 Joubert KD, Okusanya OT, Mazur S, **Ryan JP,** Ekeke CN, Schuchert MJ, Soloff AC, Dhupar R. (2021). Prognostic Difference of Pleural versus Distant Metastasis after Surgery for Lung Cancer. *Journal of Clinical Medicine, 10(4846).*
 
@@ -56,19 +56,19 @@ Rivosecchi RM, Arakelians AR, **Ryan JP,** Murray H, Padmanabhan R, Gomez H, Phi
 
 Chan EG, Chan PG, Harano T, **Ryan JP,** Morrell MR, Sanchez PG.  (2021).  Trends in lung transplantation practices across the US during the COVID-19 pandemic.  *Transplantation, 105(1),* 187-192.
 
-**2020**
+## 2020
 
 Jorge A, Sanchez PG, Hayanga JWA, Pilewski JM, Morrell M, Tuft M, **Ryan JP,** D'Cunha JD.  (2020).  Routine deep vein thrombosis screening after lung transplantation: incidence and risk factors.  *Journal of Thoracic and Cardiovascular Surgery, 159(3),* 1142-1150.
 
 D'Cunha JD, Philips BJ, Kumar A, Burki S, **Ryan JP.**  (2020).  Triptolide-induced apoptosis in non-small cell lung cancer via a novel miR204-5p/Caveolin-1/Akt-mediated pathway.  *Oncotarget, 11(28),* 2793-2806.
 
-**2018**
+## 2018
 
 **Ryan JP,** Karim HT, Aizenstein HA, Helbling NL, Toledo FGS.  (2018).  Insulin sensitivity predicts brain connectivity following a meal.  *NeuroImage, 171,* 268-276.
 
 **Ryan JP,** Aizenstein HJ, Orchard TJ, Nunley KA, Karim HT, Rosano C.  (2018).  Basal ganglia cerebral blood flow associates with psychomotor speed in adults with type 1 diabetes.  *Brain Imaging and Behavior, 12(5),* 1271-1278*.*
 
-**2015**
+## 2015
 
 **Ryan JP,** Aizenstein HJ, Orchard TJ, Ryan CM, Saxton JA, Fine DF, Nunley KA, Rosano, C.  (2015).  Age of childhood onset in type 1 diabetes and functional brain connectivity in midlife.  *Psychosomatic Medicine, 77,* 622-630.
 
@@ -76,22 +76,22 @@ Lee JH, **Ryan J**, Andreescu C, Aizenstein HJ, Lim HK.  (2015).  Brainstem mo
 
 Nunley KA, Ryan CM, Orchard TJ, Aizenstein HJ, Jennings JR, **Ryan JP**, Zgibor JC, Boudreau RM, Costacou T, Maynard J, Miller RG, Rosano C.  (2015).  White matter hyperintensities in middle-aged adults with childhood-onset type 1 diabetes.  *Neurology, 84,* 2062-2069*.*
 
-**2013**
+## 2013
 
 Vanman EJ, **Ryan JP**, Pedersen WC, & Ito TA.  (2013).  Probing prejudice with startle eyeblink modification: A marker of attention, emotion, or both?  *Int J Psychol Res, 6,* 30-41.
 
 **Ryan JP**, Sheu LK, Verstynen T, Onyewuenyi IC, & Gianaros PJ.  (2013).  Cerebral blood flow links insulin resistance and baroreflex sensitivity.  *PLOS One, 8,* 1-8.
 
-**2012**
+## 2012
 
 **Ryan JP**, Sheu LK, Critchley HD, & Gianaros PJ.  (2012).  A neural circuitry linking insulin resistance to depression.  *Psychosom Med, 74,* 476-482.
 
-**2011**
+## 2011
 
 **Ryan, JP**, Sheu, LK, & Gianaros, PJ.  (2011). Resting State Functional Connectivity within the Cingulate Cortex Jointly Predicts Agreeableness and Stressor-Evoked Cardiovascular Reactivity.   *NeuroImage, 55,* 363-370.
 
 Parent MB, Krebs-Kraft DL, **Ryan JP**, Wilson J, & Hamann S.  (2011). Glucose administration enhances fMRI brain activation and connectivity related to episodic memory encoding for neutral and emotional stimuli.  *Neuropsychologia, 49,* 1052-66*.*
 
-**2002**
+## 2002
 
 Van Petten C, Luka BJ, Rubin SR, & **Ryan JP.** (2002).  Frontal brain activity predicts individual performance in an associative memory exclusion test.  *Cereb Cortex, 12,* 1180-1192.
