--- a/Publications.qmd
+++ b/Publications.qmd
@@ -18,7 +18,7 @@ Chan EG, Hyzny EJ, Furukawa M, **Ryan JP,** Subramaniam K, Morrell MR, Pilewski 
 
 Furukawa M, Noda K, Chan EG, **Ryan JP**, Coster JN, Sanchez PG. Lung transplantation from donation after circulatory death, evolution, and current status in the United States. *Clinical Transplantation, in press.*
 
-Deitz RL, Thorngren CK, Seese LM, **Ryan JP**, Ramanan R, Sanchez PG, Murray H. Evolution of extracorporeal membrane oxygenation trigger criteria in COVID-19 acute respiratory distress syndrome. *Journal of Thoracic and Cardiovascular Surgery, in press.*
+Deitz RL, Thorngren CK, Seese LM, **s**, Ramanan R, Sanchez PG, Murray H. Evolution of extracorporeal membrane oxygenation trigger criteria in COVID-19 acute respiratory distress syndrome. *Journal of Thoracic and Cardiovascular Surgery, in press.*
 
 ## 2022
 
