--- a/index.qmd
+++ b/index.qmd
@@ -13,7 +13,7 @@ Welcome!
 
 **Texas A&M University** \| College Station, TX
 
-Masters, Statistical Data Science \| January 2023 - present
+MS, Statistical Data Science \| January 2023 - present
 
 **Georgia State University** \| Atlanta, GA
 
