--- a/Publications.qmd
+++ b/Publications.qmd
@@ -4,7 +4,7 @@ title: "Publications"
 
 ## 2023/In Press
 
-Mahajan, A; Esper, S; Oo, TH; McKibben, J; Garver, M; Artman, J; Klahre, C; **Ryan, JP**; Sadhasivam, S; Holder-Murray, J; Marroquin, OC. (2023). Development and Validation of a Machine Learning Model to Identify Patients Before Surgery at High Risk for Postoperative Adverse Events. *JAMA Network Open*, *in press*.
+Mahajan, A; Esper, S; Oo, TH; McKibben, J; Garver, M; Artman, J; Klahre, C; **Ryan, JP**; Sadhasivam, S; Holder-Murray, J; Marroquin, OC. Development and Validation of a Machine Learning Model to Identify Patients Before Surgery at High Risk for Postoperative Adverse Events. *JAMA Network Open*, *in press*.
 
 Chan EG, Pan G, Clifford S, Hyzny EJ, Furukawa M, Coster JN, **Ryan JP**, Gomez H, Sanchez PG. Postoperative Acute Kidney Injury and Long-Term Outcomes After Lung Transplantation. *Annals of Thoracic Surgery, in press*
 
