--- a/about.qmd
+++ b/about.qmd
@@ -2,4 +2,6 @@
 title: "About"
 ---
 
-I am the Statistical Project Manager for the Division of Lung Transplant in the [Department of Cardiothoracic Surgery](http://www.ctsurgery.pitt.edu/) at the University of Pittsburgh Medical Center. I have a Ph.D. in Psychology from [Georgia State University](http://www.gsu.edu), and am currently completing a Master's Degree in Statistical Data Science from [Texas A&M University](https://online.stat.tamu.edu/).
+I am the Statistical Project Manager for the Division of Lung Transplant in the [Department of Cardiothoracic Surgery](http://www.ctsurgery.pitt.edu/) at the University of Pittsburgh Medical Center. 
+
+Our research program examines the predictors of lung transplant outcomes using both internal and national registry datasets.  Additionally, we look at the relationship between Extrcorporeal Membrane Oxygenation (ECMO) and lung transplant, as well as *ex vivo* lung perfusion prior to transplant.
