--- a/Publications.qmd
+++ b/Publications.qmd
@@ -4,6 +4,9 @@ title: "Publications"
 
 ## In Press
 
+Iyanna N, Chan EG, **Ryan JP**, Furukawa M, Coster JN, Hage CA, Sanchez PG. Lung Transplantation Outcomes in Recipients Aged 70 years or older and
+the Impact of Center Volume.  *Journal of Clinical Medicine, in press.*
+
 Chan EG, Pan G, Clifford S, Hyzny EJ, Furukawa M, Coster JN, **Ryan JP**, Gomez H, Sanchez PG. [Postoperative Acute Kidney Injury and Long-Term Outcomes After Lung Transplantation](https://www.annalsthoracicsurgery.org/article/S0003-4975(23)00679-3/fulltext). *Annals of Thoracic Surgery, in press* 
 
 Hyzny EJ, Chan EG, Malik SM, Morrell MR, Furukawa M, **Ryan JP**, Sanchez PG.  [Risk Factors and Outcomes of Postoperative Hepatic Dysfunction after Lung Transplantation](https://www.annalsthoracicsurgery.org/article/S0003-4975(22)01226-7/fulltext).  *Annals of Thoracic Surgery, in press.*
