--- a/Publications.qmd
+++ b/Publications.qmd
@@ -4,8 +4,8 @@ title: "Publications"
 
 ## In Press
 
-Iyanna N, Chan EG, **Ryan JP**, Furukawa M, Coster JN, Hage CA, Sanchez PG. Lung Transplantation Outcomes in Recipients Aged 70 years or older and
-the Impact of Center Volume.  *Journal of Clinical Medicine, in press.* 
+Iyanna N, Chan EG, **Ryan JP**, Furukawa M, Coster JN, Hage CA, Sanchez PG. [Lung Transplantation Outcomes in Recipients Aged 70 years or older and
+the Impact of Center Volume](https://www.mdpi.com/2077-0383/12/16/5372).  *Journal of Clinical Medicine, in press.* 
 
 Chan EG, Pan G, Clifford S, Hyzny EJ, Furukawa M, Coster JN, **Ryan JP**, Gomez H, Sanchez PG. [Postoperative Acute Kidney Injury and Long-Term Outcomes After Lung Transplantation](https://www.annalsthoracicsurgery.org/article/S0003-4975(23)00679-3/fulltext). *Annals of Thoracic Surgery, in press* 
 
