update with GJ paper

--- a/Publications.qmd
+++ b/Publications.qmd
@@ -4,6 +4,8 @@ title: "Publications"
 
 ## In Press
 
+Furukawa M, Chan EG, **Ryan JP**, Coster JN, Sanchez PG.  Impact of gastro-jejunostomy tube in lung transplant patients: A Propensity-Matched Analysis.  *Interdisciplinary Cardiovascular and Thoracic Surgery, in press.*
+
 Iyanna N, Chan EG, **Ryan JP**, Furukawa M, Coster JN, Hage CA, Sanchez PG. [Lung Transplantation Outcomes in Recipients Aged 70 years or older and
 the Impact of Center Volume](https://www.mdpi.com/2077-0383/12/16/5372).  *Journal of Clinical Medicine, in press.*  
 
