--- a/Publications.qmd
+++ b/Publications.qmd
@@ -2,7 +2,7 @@
 title: "Publications"
 ---
 
-## In Pressa
+## In Press
 
 Furukawa M, Chan EG, **Ryan JP**, Coster JN, Sanchez PG.  Impact of gastro-jejunostomy tube in lung transplant patients: A Propensity-Matched Analysis.  *Interdisciplinary Cardiovascular and Thoracic Surgery, in press.*
 
