--- a/Publications.qmd
+++ b/Publications.qmd
@@ -6,9 +6,6 @@ title: "Publications"
 
 Furukawa M, Chan EG, **Ryan JP**, Coster JN, Sanchez PG.  Impact of gastro-jejunostomy tube in lung transplant patients: A Propensity-Matched Analysis.  *Interdisciplinary Cardiovascular and Thoracic Surgery, in press.*
 
-Iyanna N, Chan EG, **Ryan JP**, Furukawa M, Coster JN, Hage CA, Sanchez PG. [Lung Transplantation Outcomes in Recipients Aged 70 years or older and
-the Impact of Center Volume](https://www.mdpi.com/2077-0383/12/16/5372).  *Journal of Clinical Medicine, in press.*  
-
 Chan EG, Pan G, Clifford S, Hyzny EJ, Furukawa M, Coster JN, **Ryan JP**, Gomez H, Sanchez PG. [Postoperative Acute Kidney Injury and Long-Term Outcomes After Lung Transplantation](https://www.annalsthoracicsurgery.org/article/S0003-4975(23)00679-3/fulltext). *Annals of Thoracic Surgery, in press* 
 
 Hyzny EJ, Chan EG, Malik SM, Morrell MR, Furukawa M, **Ryan JP**, Sanchez PG.  [Risk Factors and Outcomes of Postoperative Hepatic Dysfunction after Lung Transplantation](https://www.annalsthoracicsurgery.org/article/S0003-4975(22)01226-7/fulltext).  *Annals of Thoracic Surgery, in press.*
@@ -18,6 +15,9 @@ Coster JN, Noda K, **Ryan JP**, Chan EG, Furukawa M, Luketich JD, Sanchez PG.  
 Deitz RL, Thorngren CK, Seese LM, **s**, Ramanan R, Sanchez PG, Murray H. [Evolution of extracorporeal membrane oxygenation trigger criteria in COVID-19 acute respiratory distress syndrome](https://www.jtcvs.org/article/S0022-5223(22)01157-6/fulltext). *Journal of Thoracic and Cardiovascular Surgery, in press.*
 
 ## 2023
+
+Iyanna N, Chan EG, **Ryan JP**, Furukawa M, Coster JN, Hage CA, Sanchez PG. [Lung Transplantation Outcomes in Recipients Aged 70 years or older and
+the Impact of Center Volume](https://www.mdpi.com/2077-0383/12/16/5372).  *Journal of Clinical Medicine, 12(16)*, 5372.  
 
 Mahajan A, Esper S, Oo TH, McKibben J, Garver M, Artman J, Klahre C, **Ryan JP**, Sadhasivam S, Holder-Murray J, Marroquin OC. (2023). [Development and Validation of a Machine Learning Model to Identify Patients Before Surgery at High Risk for Postoperative Adverse Events](https://jamanetwork.com/journals/jamanetworkopen/fullarticle/2807056). *JAMA Network Open,6(7)*:e2322285.
 
