--- a/Publications.qmd
+++ b/Publications.qmd
@@ -4,6 +4,8 @@ title: "Publications"
 
 ## In Press
 
+Sainathan S, **Ryan JP**, Mulinari LA, Sanchez PG.  Lung Transplantation in Primary Pulmonary Arterial Hypertension and Pulmonary Venous Hypertension.  *Clinical Transplantation, in press.*
+
 Furukawa M, Chan EG, **Ryan JP**, Coster JN, Sanchez PG.  Impact of gastro-jejunostomy tube in lung transplant patients: A Propensity-Matched Analysis.  *Interdisciplinary Cardiovascular and Thoracic Surgery, in press.*
 
 Chan EG, Pan G, Clifford S, Hyzny EJ, Furukawa M, Coster JN, **Ryan JP**, Gomez H, Sanchez PG. [Postoperative Acute Kidney Injury and Long-Term Outcomes After Lung Transplantation](https://www.annalsthoracicsurgery.org/article/S0003-4975(23)00679-3/fulltext). *Annals of Thoracic Surgery, in press* 
